--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -24,7 +23,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="72dp"
             android:layout_marginTop="8dp"
-            android:text="@{song.Filepath}"
+            android:text="@{song.FilePath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
